--- a/frontend/src/styles/service.css
+++ b/frontend/src/styles/service.css
@@ -32,6 +32,14 @@
     border: 1px solid var(--primary-color);
 }
 
+.light-theme .service__icon {
+    background-color: var(--primary-color);
+}
+
+.light-theme .service__icon i {
+    color: #fff;
+}
+
 .service__icon i{
     font-size: 1.5rem;
     color: var(--primary-color);
