--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -63,3 +63,39 @@
 .light-theme .copyrigth {
     color: #555;
 }
+
+@media only screen and (max-width:768px) {
+    .footer__logo {
+        width: 50%;
+    }
+
+    .footer__wrapper {
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
+    }
+
+    .footer__quick-links {
+        margin-bottom: 30px;
+    }
+
+    .footer__logo h2 {
+        font-size: 1.5rem;
+    }
+
+}
+
+@media only screen and (max-width:576px) {
+    .footer__wrapper {
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        row-gap: 1.5rem;
+    }
+    .footer__quick-links {
+        margin-bottom: 47%;
+    }
+    .footer__logo {
+        width: 47%;
+    }
+  
+  }
