--- a/frontend/src/styles/testimonials.css
+++ b/frontend/src/styles/testimonials.css
@@ -45,3 +45,9 @@
 .light-theme .customer__name {
     color: #0c123d;
 }
+
+@media only screen and (max-width:768px) {
+    .slider__wrapper {
+        width: 90%;
+    }   
+}
