--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,29 +10,23 @@
   --team-card-bg: #1b2352;
   --link-color: #fff;
   --link-active: #379cf6;
-  --card-bg: linear-gradient(
-    45deg,
-    rgba(15, 18, 61, 1) 33%,
-    rgba(15, 18, 61, 1) 52%,
-    rgba(11, 41, 69, 1) 84%
-  );
-  --counter-color: linear-gradient(
-    90deg,
-    #02bba6 30%,
-    rgba(29, 129, 176, 1) 55%,
-    rgba(35, 93, 173, 1) 75%
-  );
+  --card-bg: linear-gradient(45deg,
+      rgba(15, 18, 61, 1) 33%,
+      rgba(15, 18, 61, 1) 52%,
+      rgba(11, 41, 69, 1) 84%);
+  --counter-color: linear-gradient(90deg,
+      #02bba6 30%,
+      rgba(29, 129, 176, 1) 55%,
+      rgba(35, 93, 173, 1) 75%);
   --body-bg: rgba(6, 11, 26, 1);
-  --newsletter-bg: linear-gradient(
-    90deg,
-    rgba(27, 9, 115, 1) 20%,
-    rgba(23, 9, 96, 1) 38%,
-    rgba(14, 9, 56, 1) 100%
-  );
+  --newsletter-bg: linear-gradient(90deg,
+      rgba(27, 9, 115, 1) 20%,
+      rgba(23, 9, 96, 1) 38%,
+      rgba(14, 9, 56, 1) 100%);
   --testimonial-bg: #1a0f4f;
   --font-name: "Roboto", sans-serif;
   --small-text-color: rgba(255, 255, 255, 0.774);
-  --icon-bg:#151e4f;
+  --icon-bg: #151e4f;
 }
 
 .light-theme {
@@ -44,15 +38,12 @@
   --counter-color: #fff;
   --counter-section-bg: #816aff;
   --link-color: #0c123d;
-  --link-active: #816aff
-  --newsletter-bg: linear-gradient(
-    180deg,
-    rgba(189, 243, 255, 1) 29%,
-    rgba(193, 243, 255, 1) 50%,
-    rgba(226, 250, 255, 1) 78%
-  );
-  --small-text-color:#000;
-  --card-bg:#fff;
+  --link-active: #816aff --newsletter-bg: linear-gradient(180deg,
+      rgba(189, 243, 255, 1) 29%,
+      rgba(193, 243, 255, 1) 50%,
+      rgba(226, 250, 255, 1) 78%);
+  --small-text-color: #000;
+  --card-bg: #fff;
   --testimonial-bg: #f7f7f7;
   --team-card-bg: #fff;
 }
@@ -74,7 +65,8 @@ a {
   color: var(--link-color);
 }
 
-h1, h2 {
+h1,
+h2 {
   color: var(--heading-color);
   font-size: 2rem;
 }
@@ -112,7 +104,7 @@ section {
   font-weight: 600;
 }
 
-.light-theme a{
+.light-theme a {
   font-weight: 500;
 }
 
@@ -127,9 +119,7 @@ section {
 }
 
 @media only screen and (max-width:768px) {
-  .section {
+  section {
     padding: 40px 0;
   }
 }
-
-
